--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -92,11 +92,11 @@
   }
 
   .nav-logo-link {
-    height: 23px;
+    height: 16px;
   }
 
   .nav-logo {
-    width: 23px;
-    height: 23px;
+    width: 16px;
+    height: 16px;
   }
 }
